extras/Tests/lang.inlineEmit.ci
// test the emit intrinsic of the language

int32 emitldz32 = emit(load.z32);
int64 emitldz64 = emit(load.z64);

int32 emitA = 42;
int32 emitB = 96;

int32 emitAddI32 = emit(int32(emitA), int32(emitB), add.i32);
int32 emitDivI32 = emit(int32(10), int32(5), div.i32);
float32 emitNfcF32 = emit(float32(3.14/2), float32.sin);

// these should not compile
//int64 i64Zero = emit(load.z32);	// error: invalid assignment/initialization: size of variable is different from the value's

